1558569879 | 62 files | M bin/version.txt,  M content/panorama/localization/tenfoot_brazilian.txt,  M content/panorama/localization/tenfoot_bulgarian.txt,  M content/panorama/localization/tenfoot_czech.txt,  M content/panorama/localization/tenfoot_danish.txt,  M content/panorama/localization/tenfoot_dutch.txt,  M content/panorama/localization/tenfoot_finnish.txt,  M content/panorama/localization/tenfoot_french.txt,  M content/panorama/localization/tenfoot_german.txt,  M content/panorama/localization/tenfoot_greek.txt,  M content/panorama/localization/tenfoot_hungarian.txt,  M content/panorama/localization/tenfoot_italian.txt,  M content/panorama/localization/tenfoot_japanese.txt,  M content/panorama/localization/tenfoot_korean.txt,  M content/panorama/localization/tenfoot_koreana.txt,  M content/panorama/localization/tenfoot_latam.txt,  M content/panorama/localization/tenfoot_norwegian.txt,  M content/panorama/localization/tenfoot_polish.txt,  M content/panorama/localization/tenfoot_portuguese.txt,  M content/panorama/localization/t
https://steamdb.info/patchnotes/3877561/

--- a/content/panorama/localization/tenfoot_french.txt
+++ b/content/panorama/localization/tenfoot_french.txt
@@ -618,10 +618,10 @@
 "[english]Transition_Progress_Description"	"WAITING FOR..."
 "Now_Waiting"	"EN ATTENTE..."
 "[english]Now_Waiting"	"WAITING..."
-"HomeAppCheck"	"SteamVR Home"
-"[english]HomeAppCheck"	"SteamVR Home"
-"HomeAppDesc"	"Grâce à SteamVR Home, profitez d'espaces plus riches, de fonctionnalités sociales et plus encore."
-"[english]HomeAppDesc"	"SteamVR Home experience supports richer home spaces, social features, and more."
+"HomeAppCheck"	"Environnements SteamVR améliorés"
+"[english]HomeAppCheck"	"Enhanced SteamVR Environments"
+"HomeAppDesc"	"Découvrez les nouveaux environnements SteamVR : un univers plus riche, des fonctionnalités sociales et bien plus. Participez dès maintenant et faites-nous part de vos commentaires sur les forums SteamVR."
+"[english]HomeAppDesc"	"The new SteamVR Environments supports richer home spaces, social features, and more. Opt in to test and provide feedback on the SteamVR forums."
 "MutedLabel"	"Muet"
 "[english]MutedLabel"	"Muted"
 "BackToApp"	"REVENIR À L'APPLICATION"
@@ -668,6 +668,6 @@
 "[english]Panorama_Selection_Vietnamese"	"Tiếng Việt (Vietnamese)"
 "BindingCallout_Header"	"VOIR LES CONTRÔLES"
 "[english]BindingCallout_Header"	"SHOW CONTROLS"
-"App_Not_Responding"	"En attente de la réponse de l’application"
-"[english]App_Not_Responding"	"Waiting for application to respond"
+"App_Not_Responding"	"L'application ne répond pas..."
+"[english]App_Not_Responding"	"Application not responding..."
 }
