--- a/content/panorama/localization/tenfoot_greek.txt
+++ b/content/panorama/localization/tenfoot_greek.txt
@@ -618,10 +618,10 @@
 "[english]Transition_Progress_Description"	"WAITING FOR..."
 "Now_Waiting"	"ΑΝΑΜΟΝΗ..."
 "[english]Now_Waiting"	"WAITING..."
-"HomeAppCheck"	"SteamVR Home"
-"[english]HomeAppCheck"	"SteamVR Home"
-"HomeAppDesc"	"Η εμπειρία SteamVR Home υποστηρίζει πιο πλούσιους αρχικούς χώρους, κοινωνικές λειτουργίες και άλλα."
-"[english]HomeAppDesc"	"SteamVR Home experience supports richer home spaces, social features, and more."
+"HomeAppCheck"	"Ενισχυμένα μέρη SteamVR"
+"[english]HomeAppCheck"	"Enhanced SteamVR Environments"
+"HomeAppDesc"	"Τα νέα περιβάλλοντα SteamVR υποστηρίζουν πιο πλούσιους αρχικούς χώρους, κοινωνικές λειτουργίες και άλλα. Συμμετέχετε για να δοκιμάσετε και να δώσετε τις απόψεις σας στα forum του SteamVR."
+"[english]HomeAppDesc"	"The new SteamVR Environments supports richer home spaces, social features, and more. Opt in to test and provide feedback on the SteamVR forums."
 "MutedLabel"	"Σε σίγαση"
 "[english]MutedLabel"	"Muted"
 "BackToApp"	"ΠΙΣΩ ΣΕ ΕΦΑΡΜΟΓΗ"
@@ -668,6 +668,6 @@
 "[english]Panorama_Selection_Vietnamese"	"Tiếng Việt (Vietnamese)"
 "BindingCallout_Header"	"ΕΜΦΑΝΙΣΗ ΠΛΗΚΤΡΩΝ"
 "[english]BindingCallout_Header"	"SHOW CONTROLS"
-"App_Not_Responding"	"Αναμονή για απόκριση εφαρμογής"
-"[english]App_Not_Responding"	"Waiting for application to respond"
+"App_Not_Responding"	"Η εφαρμογή δεν ανταποκρίνεται..."
+"[english]App_Not_Responding"	"Application not responding..."
 }
