--- a/content/panorama/localization/tenfoot_italian.txt
+++ b/content/panorama/localization/tenfoot_italian.txt
@@ -616,10 +616,10 @@
 "[english]Transition_Progress_Description"	"WAITING FOR..."
 "Now_Waiting"	"IN ATTESA..."
 "[english]Now_Waiting"	"WAITING..."
-"HomeAppCheck"	"SteamVR Home"
-"[english]HomeAppCheck"	"SteamVR Home"
-"HomeAppDesc"	"SteamVR Home consente di avere spazi migliori, funzionalità \"social\" e molto altro."
-"[english]HomeAppDesc"	"SteamVR Home experience supports richer home spaces, social features, and more."
+"HomeAppCheck"	"Ambienti di SteamVR migliorati"
+"[english]HomeAppCheck"	"Enhanced SteamVR Environments"
+"HomeAppDesc"	"I nuovi ambienti di SteamVR consentono spazi iniziali migliori, funzionalità \"social\" e molto altro. Provali anche tu e facci sapere cosa ne pensi sui forum di SteamVR."
+"[english]HomeAppDesc"	"The new SteamVR Environments supports richer home spaces, social features, and more. Opt in to test and provide feedback on the SteamVR forums."
 "MutedLabel"	"Silenziato"
 "[english]MutedLabel"	"Muted"
 "BackToApp"	"TORNA ALL'APPLICAZIONE"
@@ -666,6 +666,6 @@
 "[english]Panorama_Selection_Vietnamese"	"Tiếng Việt (Vietnamese)"
 "BindingCallout_Header"	"MOSTRA I COMANDI"
 "[english]BindingCallout_Header"	"SHOW CONTROLS"
-"App_Not_Responding"	"In attesa di risposta dall'applicazione"
-"[english]App_Not_Responding"	"Waiting for application to respond"
+"App_Not_Responding"	"L'applicazione non risponde..."
+"[english]App_Not_Responding"	"Application not responding..."
 }
