--- a/content/panorama/localization/tenfoot_polish.txt
+++ b/content/panorama/localization/tenfoot_polish.txt
@@ -619,10 +619,10 @@
 "[english]Transition_Progress_Description"	"WAITING FOR..."
 "Now_Waiting"	"OCZEKIWANIE..."
 "[english]Now_Waiting"	"WAITING..."
-"HomeAppCheck"	"SteamVR Home"
-"[english]HomeAppCheck"	"SteamVR Home"
-"HomeAppDesc"	"SteamVR Home wspiera bogatsze przestrzenie domowe, funkcje społecznościowe i wiele więcej."
-"[english]HomeAppDesc"	"SteamVR Home experience supports richer home spaces, social features, and more."
+"HomeAppCheck"	"Rozszerzone środowiska SteamVR"
+"[english]HomeAppCheck"	"Enhanced SteamVR Environments"
+"HomeAppDesc"	"Nowa aplikacja SteamVR Environments wspiera bogatsze przestrzenie domowe, funkcje społecznościowe i wiele więcej. Zapisz się, by przetestować i przekazać nam swoją opinię na forum SteamVR."
+"[english]HomeAppDesc"	"The new SteamVR Environments supports richer home spaces, social features, and more. Opt in to test and provide feedback on the SteamVR forums."
 "MutedLabel"	"Wyciszono"
 "[english]MutedLabel"	"Muted"
 "BackToApp"	"WRÓĆ DO APLIKACJI"
@@ -669,6 +669,6 @@
 "[english]Panorama_Selection_Vietnamese"	"Tiếng Việt (Vietnamese)"
 "BindingCallout_Header"	"POKAŻ STEROWANIE"
 "[english]BindingCallout_Header"	"SHOW CONTROLS"
-"App_Not_Responding"	"Oczekiwanie na odpowiedź aplikacji"
-"[english]App_Not_Responding"	"Waiting for application to respond"
+"App_Not_Responding"	"Aplikacja nie odpowiada..."
+"[english]App_Not_Responding"	"Application not responding..."
 }
