--- a/content/panorama/localization/tenfoot_spanish.txt
+++ b/content/panorama/localization/tenfoot_spanish.txt
@@ -618,10 +618,10 @@
 "[english]Transition_Progress_Description"	"WAITING FOR..."
 "Now_Waiting"	"ESPERANDO..."
 "[english]Now_Waiting"	"WAITING..."
-"HomeAppCheck"	"Inicio de SteamVR"
-"[english]HomeAppCheck"	"SteamVR Home"
-"HomeAppDesc"	"La experiencia SteamVR Home te trae espacios iniciales más ricos, características sociales y mucho más."
-"[english]HomeAppDesc"	"SteamVR Home experience supports richer home spaces, social features, and more."
+"HomeAppCheck"	"Entornos de SteamVR mejorados"
+"[english]HomeAppCheck"	"Enhanced SteamVR Environments"
+"HomeAppDesc"	"Los nuevos entornos de SteamVR te traen espacios iniciales más ricos, características sociales y mucho más. Pruébalos y danos tu opinión en los foros de SteamVR."
+"[english]HomeAppDesc"	"The new SteamVR Environments supports richer home spaces, social features, and more. Opt in to test and provide feedback on the SteamVR forums."
 "MutedLabel"	"Silenciado"
 "[english]MutedLabel"	"Muted"
 "BackToApp"	"VOLVER A LA APLICACIÓN"
@@ -668,6 +668,6 @@
 "[english]Panorama_Selection_Vietnamese"	"Tiếng Việt (Vietnamese)"
 "BindingCallout_Header"	"MOSTRAR CONTROLES"
 "[english]BindingCallout_Header"	"SHOW CONTROLS"
-"App_Not_Responding"	"Esperando a que la aplicación responda"
-"[english]App_Not_Responding"	"Waiting for application to respond"
+"App_Not_Responding"	"La aplicación no responde..."
+"[english]App_Not_Responding"	"Application not responding..."
 }
