--- a/content/panorama/localization/tenfoot_tchinese.txt
+++ b/content/panorama/localization/tenfoot_tchinese.txt
@@ -619,9 +619,9 @@
 "Now_Waiting"	"請稍候…"
 "[english]Now_Waiting"	"WAITING..."
 "HomeAppCheck"	"加強型 SteamVR 環境"
-"[english]HomeAppCheck"	"SteamVR Home"
+"[english]HomeAppCheck"	"Enhanced SteamVR Environments"
 "HomeAppDesc"	"新的 SteamVR 環境支援多種居家空間、社交功能等等。立即加入測試並於 SteamVR 討論區發表意見回饋。"
-"[english]HomeAppDesc"	"SteamVR Home experience supports richer home spaces, social features, and more."
+"[english]HomeAppDesc"	"The new SteamVR Environments supports richer home spaces, social features, and more. Opt in to test and provide feedback on the SteamVR forums."
 "MutedLabel"	"已靜音"
 "[english]MutedLabel"	"Muted"
 "BackToApp"	"返回到應用程式"
