--- a/content/panorama/localization/tenfoot_ukrainian.txt
+++ b/content/panorama/localization/tenfoot_ukrainian.txt
@@ -618,10 +618,10 @@
 "[english]Transition_Progress_Description"	"WAITING FOR..."
 "Now_Waiting"	"ОЧІКУВАННЯ…"
 "[english]Now_Waiting"	"WAITING..."
-"HomeAppCheck"	"Домівка SteamVR"
-"[english]HomeAppCheck"	"SteamVR Home"
-"HomeAppDesc"	"Домівка SteamVR підтримує багатший домашній простір, соціальні функції та інше."
-"[english]HomeAppDesc"	"SteamVR Home experience supports richer home spaces, social features, and more."
+"HomeAppCheck"	"Розширені середовища SteamVR"
+"[english]HomeAppCheck"	"Enhanced SteamVR Environments"
+"HomeAppDesc"	"Нові середовища SteamVR підтримують багатший домашній простір, соціальні функції та інше. Спробуйте потестувати їх та залиште свої враження на форумах SteamVR."
+"[english]HomeAppDesc"	"The new SteamVR Environments supports richer home spaces, social features, and more. Opt in to test and provide feedback on the SteamVR forums."
 "MutedLabel"	"Заглушено"
 "[english]MutedLabel"	"Muted"
 "BackToApp"	"НАЗАД ДО ЗАСТОСУНКУ"
@@ -668,6 +668,6 @@
 "[english]Panorama_Selection_Vietnamese"	"Tiếng Việt (Vietnamese)"
 "BindingCallout_Header"	"ПОКАЗАТИ КЕРУВАННЯ"
 "[english]BindingCallout_Header"	"SHOW CONTROLS"
-"App_Not_Responding"	"Очікування на відповідь застосунку…"
-"[english]App_Not_Responding"	"Waiting for application to respond"
+"App_Not_Responding"	"Застосунок не відповідає…"
+"[english]App_Not_Responding"	"Application not responding..."
 }
