--- a/content/vrmonitor/translations/vrmonitor_czech.txt
+++ b/content/vrmonitor/translations/vrmonitor_czech.txt
@@ -2295,12 +2295,12 @@
 "[english]BS20_ConfigureChannel_IdentifyRequiresFirmareUpdate"	"%1 requires a device update to enable device identification."
 "BS_PowerManagement_VisibleNowInTracking"	"Viditelná v této relaci"
 "[english]BS_PowerManagement_VisibleNowInTracking"	"Visible now in this tracking session"
-"Monitor_RestartRequestedDialog_Title"	"Ovladač „%1“ vyžaduje restart režimu SteamVR"
-"[english]Monitor_RestartRequestedDialog_Title"	"Restart for %1 driver"
+"Monitor_RestartRequestedDialog_Title"	"Je vyžadován restart"
+"[english]Monitor_RestartRequestedDialog_Title"	"Restart Required"
 "Monitor_RestartRequestedDialog_MessageNoReason"	"Ovladač „%1“ potřebuje restartovat režim SteamVR."
 "[english]Monitor_RestartRequestedDialog_MessageNoReason"	"Driver %1 needs to restart SteamVR."
-"Monitor_RestartRequestedDialog_Message"	"%1"
-"[english]Monitor_RestartRequestedDialog_Message"	"%1"
+"Monitor_RestartRequestedDialog_Message"	"Ovladač „%1“ potřebuje restartovat režim SteamVR.\n%2"
+"[english]Monitor_RestartRequestedDialog_Message"	"Driver %1 needs to restart SteamVR.\n%2"
 "Monitor_RestartRequestedDialog_Restart"	"Restartovat režim SteamVR"
 "[english]Monitor_RestartRequestedDialog_Restart"	"Restart SteamVR"
 "Monitor_RestartRequestedDialog_Quit"	"Ukončit režim SteamVR"
@@ -2363,8 +2363,8 @@
 "[english]BS20_UpdateRecovery_NoStationsFound"	"Scan Completed.\n\nThere are no broadcasting Base Stations needing recovery within proximity."
 "BS20_UpdateRecovery_Refresh"	"Opakovat hledání"
 "[english]BS20_UpdateRecovery_Refresh"	"Scan Again"
-"BS20_UpdateRecovery_UpdateDevice"	"Obnovit zařízení"
-"[english]BS20_UpdateRecovery_UpdateDevice"	"Recover Device"
+"BS20_UpdateRecovery_UpdateDevice"	"Aktualizovat zařízení"
+"[english]BS20_UpdateRecovery_UpdateDevice"	"Update Device"
 "VRApplicationError_None"	"Žádná chyba"
 "[english]VRApplicationError_None"	"No Error"
 "VRApplicationError_AppKeyAlreadyExists"	"Aplikace už je zaregistrována"
@@ -2411,9 +2411,5 @@
 "[english]Settings_Advanced_RefreshRate_NotFound"	"<b>NOTE:</b> Additional refresh rates are supported by your HMD, but they were not detected by the graphics driver."
 "Settings_Advanced_RefreshRate_NotAvailableExtended"	"<b>POZNÁMKA:</b> Váš headset podporuje i jiné obnovovací frekvence, ale při režimu rozšíření je není možné spravovat. <a href='vrmonitor://directmode/enable'><span style='color:white;'>Zapněte proto přímý zobrazovací režim.</span></a>"
 "[english]Settings_Advanced_RefreshRate_NotAvailableExtended"	"<b>NOTE:</b> Additional refresh rates are supported by your HMD, but SteamVR cannot manage refresh rates when the HMD is in extended mode. <a href='vrmonitor://directmode/enable'><span style='color:white;'>Enable direct mode.</span></a>"
-"oculus_display_lost"	"Systém Oculus ztratil spojení s displejem. Zkontrolujte připojení headsetu a proveďte restart."
-"[english]oculus_display_lost"	"The Oculus system has lost its connection to the display. Please check your headset's connection and then restart."
-"BS20_UpdateRecovery_FoundStations"	"Vyhledávání dokončeno.<br><br><font color=#ffffff>Tyto základní stanice mají problém s nedokončenou aktualizací.<br><br>Vyberte základní stanici a pokračujte kliknutím na tlačítko „Obnovit zařízení“.</font>"
-"[english]BS20_UpdateRecovery_FoundStations"	"Scan Completed.<br><br><font color=#ffffff>These Base Stations have incomplete updates.<br><br>Please select a Base Station and click 'Recover Device' to continue.</font>"
 }
 }
