--- a/content/vrmonitor/translations/vrmonitor_errors_ukrainian.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_ukrainian.txt
@@ -871,7 +871,7 @@
 "[english]VRInitError_VendorSpecific_WindowsNotInDevMode_Header"	"Windows 10 Update"
 "VRInitError_VendorSpecific_WindowsNotInDevMode_Description"	"Щоби використовувати SteamVR із Windows Mixed Reality, вам необхідно інсталювати останнє оновлення Windows."
 "[english]VRInitError_VendorSpecific_WindowsNotInDevMode_Description"	"To use SteamVR with Windows Mixed Reality, you need to install the latest Windows update."
-"VRInitError_VendorSpecific_WindowsNotInDevMode_Action"	"Докладніше"
+"VRInitError_VendorSpecific_WindowsNotInDevMode_Action"	"Дізнатися більше"
 "[english]VRInitError_VendorSpecific_WindowsNotInDevMode_Action"	"Learn more"
 "Lighthouse_RecommendControllerUpgradeOverUsb_Header"	"Необхідне оновлення контролера"
 "[english]Lighthouse_RecommendControllerUpgradeOverUsb_Header"	"Controller Update Required"
@@ -955,7 +955,7 @@
 "[english]VRInitError_IPC_ServerInitFailed_FirstActionURL"	"vrmonitor://reboothmd"
 "Warning_DismissableWarning_SteamVRInSafeMode_Header"	"Безпечний режим"
 "[english]Warning_DismissableWarning_SteamVRInSafeMode_Header"	"Safe Mode"
-"Warning_DismissableWarning_SteamVRInSafeMode_Description"	"<span>У зв’язку</span> з останнім аварійним завершенням SteamVR наразі працює у безпечному режимі.<p><a style ='color: rgb(212, 212, 212);' href='https://support.steampowered.com/kb_article.php?ref=8566-SDZC-9326'>Докладніше</a>."
+"Warning_DismissableWarning_SteamVRInSafeMode_Description"	"<span>У зв’язку</span> з останнім аварійним завершенням SteamVR наразі працює у безпечному режимі.<p><a style ='color: rgb(212, 212, 212);' href='https://support.steampowered.com/kb_article.php?ref=8566-SDZC-9326'>Дізнатися більше</a>."
 "[english]Warning_DismissableWarning_SteamVRInSafeMode_Description"	"<span>Due</span> to a recent crash, SteamVR is currently operating in Safe Mode.<p><a style ='color: rgb(212, 212, 212);' href='https://support.steampowered.com/kb_article.php?ref=8566-SDZC-9326'>Learn more</a>."
 "Warning_DismissableWarning_SteamVRInSafeMode_Action"	"Вимкнути безпечний режим"
 "[english]Warning_DismissableWarning_SteamVRInSafeMode_Action"	"Disable Safe Mode"
