--- a/content/vrmonitor/translations/vrmonitor_german.txt
+++ b/content/vrmonitor/translations/vrmonitor_german.txt
@@ -2254,11 +2254,11 @@
 "BS_PowerManagement_VisibleNowInTracking"	"Sichtbar in dieser Erfassungssitzung"
 "[english]BS_PowerManagement_VisibleNowInTracking"	"Visible now in this tracking session"
 "Monitor_RestartRequestedDialog_Title"	"Neustart erforderlich"
-"[english]Monitor_RestartRequestedDialog_Title"	"Restart for %1 driver"
+"[english]Monitor_RestartRequestedDialog_Title"	"Restart Required"
 "Monitor_RestartRequestedDialog_MessageNoReason"	"Treiber %1 muss SteamVR neu starten."
 "[english]Monitor_RestartRequestedDialog_MessageNoReason"	"Driver %1 needs to restart SteamVR."
 "Monitor_RestartRequestedDialog_Message"	"Treiber %1 muss SteamVR neu starten.\n%2"
-"[english]Monitor_RestartRequestedDialog_Message"	"%1"
+"[english]Monitor_RestartRequestedDialog_Message"	"Driver %1 needs to restart SteamVR.\n%2"
 "Monitor_RestartRequestedDialog_Restart"	"SteamVR neu starten"
 "[english]Monitor_RestartRequestedDialog_Restart"	"Restart SteamVR"
 "Monitor_RestartRequestedDialog_Quit"	"SteamVR beenden"
@@ -2287,8 +2287,8 @@
 "[english]BS_PowerManagement_FailedToConnectRefresh"	"%1 failed to connect. Click 'Refresh' to try again."
 "Monitor_WakingBaseStations"	"Basisstationen werden aufgeweckt..."
 "[english]Monitor_WakingBaseStations"	"Bases Powering Up..."
-"BS20_UpdateRecovery_UpdateDevice"	"Gerät wiederherstellen"
-"[english]BS20_UpdateRecovery_UpdateDevice"	"Recover Device"
+"BS20_UpdateRecovery_UpdateDevice"	"Gerät aktualisieren"
+"[english]BS20_UpdateRecovery_UpdateDevice"	"Update Device"
 "VRApplicationError_None"	"Kein Fehler"
 "[english]VRApplicationError_None"	"No Error"
 "VRApplicationError_NoApplication"	"Keine Anwendung"
