--- a/content/vrmonitor/translations/vrmonitor_spanish.txt
+++ b/content/vrmonitor/translations/vrmonitor_spanish.txt
@@ -2275,12 +2275,12 @@
 "[english]BS20_ConfigureChannel_IdentifyRequiresFirmareUpdate"	"%1 requires a device update to enable device identification."
 "BS_PowerManagement_VisibleNowInTracking"	"Visible ahora en esta sesión de seguimiento"
 "[english]BS_PowerManagement_VisibleNowInTracking"	"Visible now in this tracking session"
-"Monitor_RestartRequestedDialog_Title"	"Es necesario reiniciar el controlador %1"
-"[english]Monitor_RestartRequestedDialog_Title"	"Restart for %1 driver"
+"Monitor_RestartRequestedDialog_Title"	"Se necesita reiniciar"
+"[english]Monitor_RestartRequestedDialog_Title"	"Restart Required"
 "Monitor_RestartRequestedDialog_MessageNoReason"	"El controlador %1 necesita reiniciar SteamVR."
 "[english]Monitor_RestartRequestedDialog_MessageNoReason"	"Driver %1 needs to restart SteamVR."
-"Monitor_RestartRequestedDialog_Message"	"%1"
-"[english]Monitor_RestartRequestedDialog_Message"	"%1"
+"Monitor_RestartRequestedDialog_Message"	"El controlador %1 necesita reiniciar SteamVR.\n%2"
+"[english]Monitor_RestartRequestedDialog_Message"	"Driver %1 needs to restart SteamVR.\n%2"
 "Monitor_RestartRequestedDialog_Restart"	"Reiniciar SteamVR"
 "[english]Monitor_RestartRequestedDialog_Restart"	"Restart SteamVR"
 "Monitor_RestartRequestedDialog_Quit"	"Salir de SteamVR"
@@ -2309,9 +2309,9 @@
 "[english]BS_PowerManagement_ObservedInTracking"	"Observed in a prior tracking session"
 "BS_PowerManagement_FailedToConnectRefresh"	"No se ha podido conectar %1. Haz clic en «Actualizar» para volver a intentarlo."
 "[english]BS_PowerManagement_FailedToConnectRefresh"	"%1 failed to connect. Click 'Refresh' to try again."
-"Monitor_WakingBaseStations"	"Encendiendo estaciones base..."
+"Monitor_WakingBaseStations"	"Activando estaciones base..."
 "[english]Monitor_WakingBaseStations"	"Bases Powering Up..."
-"Monitor_PuttingBaseStationsInStandby"	"Apagando estaciones base..."
+"Monitor_PuttingBaseStationsInStandby"	"Bases entrando en modo de espera..."
 "[english]Monitor_PuttingBaseStationsInStandby"	"Bases Powering Down..."
 "Settings_BaseStation_ContinueBaseStationUpdate"	"Recuperación de actualización incompleta"
 "[english]Settings_BaseStation_ContinueBaseStationUpdate"	"Recover From Incomplete Update"
@@ -2343,8 +2343,8 @@
 "[english]BS20_UpdateRecovery_NoStationsFound"	"Scan Completed.\n\nThere are no broadcasting Base Stations needing recovery within proximity."
 "BS20_UpdateRecovery_Refresh"	"Buscar de nuevo"
 "[english]BS20_UpdateRecovery_Refresh"	"Scan Again"
-"BS20_UpdateRecovery_UpdateDevice"	"Recuperar dispositivo"
-"[english]BS20_UpdateRecovery_UpdateDevice"	"Recover Device"
+"BS20_UpdateRecovery_UpdateDevice"	"Actualizar dispositivo"
+"[english]BS20_UpdateRecovery_UpdateDevice"	"Update Device"
 "VRApplicationError_None"	"Ningún error"
 "[english]VRApplicationError_None"	"No Error"
 "VRApplicationError_AppKeyAlreadyExists"	"La aplicación ya está registrada"
@@ -2391,9 +2391,5 @@
 "[english]Settings_Advanced_RefreshRate_NotFound"	"<b>NOTE:</b> Additional refresh rates are supported by your HMD, but they were not detected by the graphics driver."
 "Settings_Advanced_RefreshRate_NotAvailableExtended"	"<b>AVISO:</b> Tu visor admite más frecuencias de actualización, pero SteamVR no puede administrar las frecuencias de actualización cuando el visor está en modo extendido. <a href='vrmonitor://directmode/enable'><span style='color:white;'>Activa el modo directo.</span></a>"
 "[english]Settings_Advanced_RefreshRate_NotAvailableExtended"	"<b>NOTE:</b> Additional refresh rates are supported by your HMD, but SteamVR cannot manage refresh rates when the HMD is in extended mode. <a href='vrmonitor://directmode/enable'><span style='color:white;'>Enable direct mode.</span></a>"
-"oculus_display_lost"	"El sistema Oculus ha perdido su conexión a la pantalla. Verifica la conexión de tu visor y reinicia."
-"[english]oculus_display_lost"	"The Oculus system has lost its connection to the display. Please check your headset's connection and then restart."
-"BS20_UpdateRecovery_FoundStations"	"Búsqueda completada.<br><br><font color=#ffffff>Estas estaciones base tienen actualizaciones incompletas.<br><br>Selecciona una estación base y haz clic en Recuperar dispositivo para continuar.</font>"
-"[english]BS20_UpdateRecovery_FoundStations"	"Scan Completed.<br><br><font color=#ffffff>These Base Stations have incomplete updates.<br><br>Please select a Base Station and click 'Recover Device' to continue.</font>"
 }
 }
