--- a/content/vrmonitor/translations/vrmonitor_thai.txt
+++ b/content/vrmonitor/translations/vrmonitor_thai.txt
@@ -2280,12 +2280,12 @@
 "[english]BS20_ConfigureChannel_IdentifyRequiresFirmareUpdate"	"%1 requires a device update to enable device identification."
 "BS_PowerManagement_VisibleNowInTracking"	"มองเห็นได้ในขณะนี้ในเซสชันการติดตามนี้"
 "[english]BS_PowerManagement_VisibleNowInTracking"	"Visible now in this tracking session"
-"Monitor_RestartRequestedDialog_Title"	"รีสตาร์ทสำหรับไดรเวอร์ %1"
-"[english]Monitor_RestartRequestedDialog_Title"	"Restart for %1 driver"
+"Monitor_RestartRequestedDialog_Title"	"จำเป็นต้องรีสตาร์ท"
+"[english]Monitor_RestartRequestedDialog_Title"	"Restart Required"
 "Monitor_RestartRequestedDialog_MessageNoReason"	"ไดรเวอร์ %1 จำเป็นต้องให้รีสตาร์ท SteamVR"
 "[english]Monitor_RestartRequestedDialog_MessageNoReason"	"Driver %1 needs to restart SteamVR."
-"Monitor_RestartRequestedDialog_Message"	"%1"
-"[english]Monitor_RestartRequestedDialog_Message"	"%1"
+"Monitor_RestartRequestedDialog_Message"	"ไดรเวอร์ %1 จำเป็นต้องให้รีสตาร์ท SteamVR \n%2"
+"[english]Monitor_RestartRequestedDialog_Message"	"Driver %1 needs to restart SteamVR.\n%2"
 "Monitor_RestartRequestedDialog_Restart"	"รีสตาร์ท SteamVR"
 "[english]Monitor_RestartRequestedDialog_Restart"	"Restart SteamVR"
 "Monitor_RestartRequestedDialog_Quit"	"ออกจาก SteamVR"
@@ -2348,8 +2348,8 @@
 "[english]BS20_UpdateRecovery_NoStationsFound"	"Scan Completed.\n\nThere are no broadcasting Base Stations needing recovery within proximity."
 "BS20_UpdateRecovery_Refresh"	"สแกนอีกครั้ง"
 "[english]BS20_UpdateRecovery_Refresh"	"Scan Again"
-"BS20_UpdateRecovery_UpdateDevice"	"กู้คืนอุปกรณ์"
-"[english]BS20_UpdateRecovery_UpdateDevice"	"Recover Device"
+"BS20_UpdateRecovery_UpdateDevice"	"อัปเดตอุปกรณ์"
+"[english]BS20_UpdateRecovery_UpdateDevice"	"Update Device"
 "VRApplicationError_None"	"ไม่พบข้อผิดพลาด"
 "[english]VRApplicationError_None"	"No Error"
 "VRApplicationError_AppKeyAlreadyExists"	"แอปพลิเคชันได้ถูกลงทะเบียนไว้อยู่แล้ว"
@@ -2396,7 +2396,5 @@
 "[english]Settings_Advanced_RefreshRate_NotFound"	"<b>NOTE:</b> Additional refresh rates are supported by your HMD, but they were not detected by the graphics driver."
 "Settings_Advanced_RefreshRate_NotAvailableExtended"	"<b>หมายเหตุ:</b> หน้าจอสวมศีรษะของคุณสามารถรองรับอัตรารีเฟรชเพิ่มเติมได้ แต่ SteamVR ไม่สามารถจัดการอัตรารีเฟรชได้ในขณะที่หน้าจอสวมศีรษะอยู่ใน Extended Mode <a href='vrmonitor://directmode/enable'><span style='color:white;'>กรุณา เปิดการใช้งาน Direct Mode</span></a>"
 "[english]Settings_Advanced_RefreshRate_NotAvailableExtended"	"<b>NOTE:</b> Additional refresh rates are supported by your HMD, but SteamVR cannot manage refresh rates when the HMD is in extended mode. <a href='vrmonitor://directmode/enable'><span style='color:white;'>Enable direct mode.</span></a>"
-"oculus_display_lost"	"ระบบ Oculus ได้ขาดการเชื่อมต่อจากจอแสดงผล กรุณาตรวจสอบการเชื่อมต่อเครื่องสวมศีรษะของคุณแล้วจึงรีสตาร์ท"
-"[english]oculus_display_lost"	"The Oculus system has lost its connection to the display. Please check your headset's connection and then restart."
 }
 }
