--- a/content/panorama/localization/tenfoot_hungarian.txt
+++ b/content/panorama/localization/tenfoot_hungarian.txt
@@ -619,10 +619,10 @@
 "[english]Transition_Progress_Description"	"WAITING FOR..."
 "Now_Waiting"	"VÁRAKOZÁS..."
 "[english]Now_Waiting"	"WAITING..."
-"HomeAppCheck"	"SteamVR Otthon"
-"[english]HomeAppCheck"	"SteamVR Home"
-"HomeAppDesc"	"A SteamVR Otthon élmény részletgazdagabb kezdőteret, társasági funkciókat és sok mást támogat."
-"[english]HomeAppDesc"	"SteamVR Home experience supports richer home spaces, social features, and more."
+"HomeAppCheck"	"Fejlesztett SteamVR környezetek"
+"[english]HomeAppCheck"	"Enhanced SteamVR Environments"
+"HomeAppDesc"	"Az új SteamVR Környezetek részletgazdagabb kezdőteret, társasági funkciókat és sok mást támogat. Jelentkezz tesztelni és adj visszajelzést a SteamVR fórumokon."
+"[english]HomeAppDesc"	"The new SteamVR Environments supports richer home spaces, social features, and more. Opt in to test and provide feedback on the SteamVR forums."
 "MutedLabel"	"Némítva"
 "[english]MutedLabel"	"Muted"
 "BackToApp"	"VISSZA AZ ALKALMAZÁSBA"
@@ -669,6 +669,6 @@
 "[english]Panorama_Selection_Vietnamese"	"Tiếng Việt (Vietnamese)"
 "BindingCallout_Header"	"VEZÉRLÉS MUTATÁSA"
 "[english]BindingCallout_Header"	"SHOW CONTROLS"
-"App_Not_Responding"	"Várakozás az alkalmazás válaszára"
-"[english]App_Not_Responding"	"Waiting for application to respond"
+"App_Not_Responding"	"Az alkalmazás nem válaszol..."
+"[english]App_Not_Responding"	"Application not responding..."
 }
