--- a/content/panorama/localization/tenfoot_norwegian.txt
+++ b/content/panorama/localization/tenfoot_norwegian.txt
@@ -618,10 +618,10 @@
 "[english]Transition_Progress_Description"	"WAITING FOR..."
 "Now_Waiting"	"VENTER..."
 "[english]Now_Waiting"	"WAITING..."
-"HomeAppCheck"	"SteamVR Home"
-"[english]HomeAppCheck"	"SteamVR Home"
-"HomeAppDesc"	"SteamVR Home støtter mer innholdsrike hjemmeområder, sosiale funksjoner og mer."
-"[english]HomeAppDesc"	"SteamVR Home experience supports richer home spaces, social features, and more."
+"HomeAppCheck"	"Forbedrede SteamVR-omgivelser"
+"[english]HomeAppCheck"	"Enhanced SteamVR Environments"
+"HomeAppDesc"	"De nye SteamVR-omgivelsene støtter mer innholdsrike hjemmeområder, sosiale funksjoner med mer. Meld deg inn for å teste og komme med tilbakemelding på SteamVR-forumene."
+"[english]HomeAppDesc"	"The new SteamVR Environments supports richer home spaces, social features, and more. Opt in to test and provide feedback on the SteamVR forums."
 "MutedLabel"	"Dempet"
 "[english]MutedLabel"	"Muted"
 "BackToApp"	"TILBAKE TIL APP"
@@ -668,6 +668,6 @@
 "[english]Panorama_Selection_Vietnamese"	"Tiếng Việt (Vietnamese)"
 "BindingCallout_Header"	"VIS KONTROLLER"
 "[english]BindingCallout_Header"	"SHOW CONTROLS"
-"App_Not_Responding"	"Venter på at programmet skal svare"
-"[english]App_Not_Responding"	"Waiting for application to respond"
+"App_Not_Responding"	"Programmet svarer ikke..."
+"[english]App_Not_Responding"	"Application not responding..."
 }
