--- a/content/panorama/localization/tenfoot_romanian.txt
+++ b/content/panorama/localization/tenfoot_romanian.txt
@@ -620,9 +620,9 @@ Găsește mai multe înfățișări"
 "Now_Waiting"	"AȘTEAPTĂ..."
 "[english]Now_Waiting"	"WAITING..."
 "HomeAppCheck"	"Medii SteamVR îmbunătățite"
-"[english]HomeAppCheck"	"SteamVR Home"
+"[english]HomeAppCheck"	"Enhanced SteamVR Environments"
 "HomeAppDesc"	"Noile medii pentru SteamVR aduc spații mai bogate pentru acasă, funcții sociale și multe altele. Participă pentru a testa și a oferi reacții pe forumurile SteamVR."
-"[english]HomeAppDesc"	"SteamVR Home experience supports richer home spaces, social features, and more."
+"[english]HomeAppDesc"	"The new SteamVR Environments supports richer home spaces, social features, and more. Opt in to test and provide feedback on the SteamVR forums."
 "MutedLabel"	"Amuțit"
 "[english]MutedLabel"	"Muted"
 "BackToApp"	"ÎNAPOI LA APLICAȚIE"
