--- a/content/panorama/localization/tenfoot_schinese.txt
+++ b/content/panorama/localization/tenfoot_schinese.txt
@@ -619,9 +619,9 @@
 "Now_Waiting"	"正在等待…"
 "[english]Now_Waiting"	"WAITING..."
 "HomeAppCheck"	"增强型 SteamVR 环境"
-"[english]HomeAppCheck"	"SteamVR Home"
+"[english]HomeAppCheck"	"Enhanced SteamVR Environments"
 "HomeAppDesc"	"新的“SteamVR 环境”支持更广阔的住宅空间、社交功能以及更多内容。选择参加以测试并在 SteamVR 论坛提供反馈。"
-"[english]HomeAppDesc"	"SteamVR Home experience supports richer home spaces, social features, and more."
+"[english]HomeAppDesc"	"The new SteamVR Environments supports richer home spaces, social features, and more. Opt in to test and provide feedback on the SteamVR forums."
 "MutedLabel"	"被禁言"
 "[english]MutedLabel"	"Muted"
 "BackToApp"	"返回应用"
