--- a/content/panorama/localization/tenfoot_thai.txt
+++ b/content/panorama/localization/tenfoot_thai.txt
@@ -618,10 +618,10 @@
 "[english]Transition_Progress_Description"	"WAITING FOR..."
 "Now_Waiting"	"กำลังรอ..."
 "[english]Now_Waiting"	"WAITING..."
-"HomeAppCheck"	"บ้าน SteamVR"
-"[english]HomeAppCheck"	"SteamVR Home"
+"HomeAppCheck"	"สภาพแวดล้อม SteamVR แบบเสริมประสิทธิภาพ"
+"[english]HomeAppCheck"	"Enhanced SteamVR Environments"
 "HomeAppDesc"	"สภาพแวดล้อม SteamVR ใหม่รองรับพื้นที่บ้านที่ดียิ่งขึ้น คุณสมบัติทางสังคม และอีกมากมาย เข้าร่วมเพื่อทดสอบและให้ข้อเสนอแนะบนฟอรัม SteamVR"
-"[english]HomeAppDesc"	"SteamVR Home experience supports richer home spaces, social features, and more."
+"[english]HomeAppDesc"	"The new SteamVR Environments supports richer home spaces, social features, and more. Opt in to test and provide feedback on the SteamVR forums."
 "MutedLabel"	"ปิดเสียง"
 "[english]MutedLabel"	"Muted"
 "BackToApp"	"กลับไปยังแอป"
@@ -668,6 +668,6 @@
 "[english]Panorama_Selection_Vietnamese"	"Tiếng Việt (Vietnamese)"
 "BindingCallout_Header"	"แสดงการควบคุม"
 "[english]BindingCallout_Header"	"SHOW CONTROLS"
-"App_Not_Responding"	"กำลังรอแอปพลิเคชันตอบสนอง"
-"[english]App_Not_Responding"	"Waiting for application to respond"
+"App_Not_Responding"	"แอปพลิเคชันไม่ตอบสนอง..."
+"[english]App_Not_Responding"	"Application not responding..."
 }
