--- a/content/vrmonitor/translations/vrmonitor_greek.txt
+++ b/content/vrmonitor/translations/vrmonitor_greek.txt
@@ -2280,12 +2280,12 @@
 "[english]BS20_ConfigureChannel_IdentifyRequiresFirmareUpdate"	"%1 requires a device update to enable device identification."
 "BS_PowerManagement_VisibleNowInTracking"	"Ορατό τώρα σε αυτή τη συνεδρία ανίχνευσης"
 "[english]BS_PowerManagement_VisibleNowInTracking"	"Visible now in this tracking session"
-"Monitor_RestartRequestedDialog_Title"	"Επανεκκίνηση για τον οδηγό %1"
-"[english]Monitor_RestartRequestedDialog_Title"	"Restart for %1 driver"
+"Monitor_RestartRequestedDialog_Title"	"Απαιτείται επανεκκίνηση"
+"[english]Monitor_RestartRequestedDialog_Title"	"Restart Required"
 "Monitor_RestartRequestedDialog_MessageNoReason"	"Ο οδηγός %1 χρειάζεται να επανεκκινήσει το SteamVR."
 "[english]Monitor_RestartRequestedDialog_MessageNoReason"	"Driver %1 needs to restart SteamVR."
-"Monitor_RestartRequestedDialog_Message"	"%1"
-"[english]Monitor_RestartRequestedDialog_Message"	"%1"
+"Monitor_RestartRequestedDialog_Message"	"Ο οδηγός %1 χρειάζεται να επανεκκινήσει το SteamVR.\n%2"
+"[english]Monitor_RestartRequestedDialog_Message"	"Driver %1 needs to restart SteamVR.\n%2"
 "Monitor_RestartRequestedDialog_Restart"	"Επανεκκίνηση SteamVR"
 "[english]Monitor_RestartRequestedDialog_Restart"	"Restart SteamVR"
 "Monitor_RestartRequestedDialog_Quit"	"Έξοδος από SteamVR"
@@ -2348,8 +2348,8 @@
 "[english]BS20_UpdateRecovery_NoStationsFound"	"Scan Completed.\n\nThere are no broadcasting Base Stations needing recovery within proximity."
 "BS20_UpdateRecovery_Refresh"	"Σάρωση ξανά"
 "[english]BS20_UpdateRecovery_Refresh"	"Scan Again"
-"BS20_UpdateRecovery_UpdateDevice"	"Ανάκτηση συσκευής"
-"[english]BS20_UpdateRecovery_UpdateDevice"	"Recover Device"
+"BS20_UpdateRecovery_UpdateDevice"	"Ενημέρωση συσκευής"
+"[english]BS20_UpdateRecovery_UpdateDevice"	"Update Device"
 "VRApplicationError_None"	"Χωρίς σφάλμα"
 "[english]VRApplicationError_None"	"No Error"
 "VRApplicationError_AppKeyAlreadyExists"	"Η εφαρμογή είναι ήδη εγγεγραμμένη"
@@ -2396,9 +2396,5 @@
 "[english]Settings_Advanced_RefreshRate_NotFound"	"<b>NOTE:</b> Additional refresh rates are supported by your HMD, but they were not detected by the graphics driver."
 "Settings_Advanced_RefreshRate_NotAvailableExtended"	"<b>ΣΗΜΕΙΩΣΗ:</b> Υποστηρίζονται πρόσθετοι ρυθμοί ανανέωσης από την οθόνη του headset σας, αλλά το SteamVR δεν μπορεί να διαχειριστεί ρυθμούς ανανέωσης όταν οι οθόνες του headset είναι σε εκτεταμένη λειτουργία. <a href='vrmonitor://directmode/enable'><span style='color:white;'>Ενεργοποίηση άμεσης λειτουργίας.</span></a>"
 "[english]Settings_Advanced_RefreshRate_NotAvailableExtended"	"<b>NOTE:</b> Additional refresh rates are supported by your HMD, but SteamVR cannot manage refresh rates when the HMD is in extended mode. <a href='vrmonitor://directmode/enable'><span style='color:white;'>Enable direct mode.</span></a>"
-"oculus_display_lost"	"Το σύστημα Oculus έχασε τη σύνδεσή του με την προβολή. Παρακαλούμε ελέγξτε τη σύνδεση του headset σας και έπειτα επανεκκινήστε."
-"[english]oculus_display_lost"	"The Oculus system has lost its connection to the display. Please check your headset's connection and then restart."
-"BS20_UpdateRecovery_FoundStations"	"Η σάρωση ολοκληρώθηκε.<br><br><font color=#ffffff>Αυτοί οι σταθμοί βάσης έχουν ανολοκλήρωτες ενημερώσεις.<br><br>Παρακαλούμε επιλέξτε ένα σταθμό βάσης και πατήστε «Ανάκτηση συσκευής» για να συνεχίσετε.</font>"
-"[english]BS20_UpdateRecovery_FoundStations"	"Scan Completed.<br><br><font color=#ffffff>These Base Stations have incomplete updates.<br><br>Please select a Base Station and click 'Recover Device' to continue.</font>"
 }
 }
