--- a/content/vrmonitor/translations/vrmonitor_hungarian.txt
+++ b/content/vrmonitor/translations/vrmonitor_hungarian.txt
@@ -2297,12 +2297,12 @@
 "[english]BS20_ConfigureChannel_IdentifyRequiresFirmareUpdate"	"%1 requires a device update to enable device identification."
 "BS_PowerManagement_VisibleNowInTracking"	"Most látható ebben a követési munkamenetben"
 "[english]BS_PowerManagement_VisibleNowInTracking"	"Visible now in this tracking session"
-"Monitor_RestartRequestedDialog_Title"	"Újraindítás a(z) %1 illesztőprogramhoz"
-"[english]Monitor_RestartRequestedDialog_Title"	"Restart for %1 driver"
+"Monitor_RestartRequestedDialog_Title"	"Újraindítás szükséges"
+"[english]Monitor_RestartRequestedDialog_Title"	"Restart Required"
 "Monitor_RestartRequestedDialog_MessageNoReason"	"A(z) %1 illesztőprogramnak újra kell indítania a SteamVR-t."
 "[english]Monitor_RestartRequestedDialog_MessageNoReason"	"Driver %1 needs to restart SteamVR."
-"Monitor_RestartRequestedDialog_Message"	"%1"
-"[english]Monitor_RestartRequestedDialog_Message"	"%1"
+"Monitor_RestartRequestedDialog_Message"	"A(z) %1 illesztőprogramnak újra kell indítania a SteamVR-t.\n%2"
+"[english]Monitor_RestartRequestedDialog_Message"	"Driver %1 needs to restart SteamVR.\n%2"
 "Monitor_RestartRequestedDialog_Restart"	"SteamVR újraindítása"
 "[english]Monitor_RestartRequestedDialog_Restart"	"Restart SteamVR"
 "Monitor_RestartRequestedDialog_Quit"	"Kilépés a SteamVR-ből"
@@ -2365,8 +2365,8 @@
 "[english]BS20_UpdateRecovery_NoStationsFound"	"Scan Completed.\n\nThere are no broadcasting Base Stations needing recovery within proximity."
 "BS20_UpdateRecovery_Refresh"	"Újrakeresés"
 "[english]BS20_UpdateRecovery_Refresh"	"Scan Again"
-"BS20_UpdateRecovery_UpdateDevice"	"Eszköz helyreállítása"
-"[english]BS20_UpdateRecovery_UpdateDevice"	"Recover Device"
+"BS20_UpdateRecovery_UpdateDevice"	"Eszközfrissítés"
+"[english]BS20_UpdateRecovery_UpdateDevice"	"Update Device"
 "VRApplicationError_None"	"Nincs hiba"
 "[english]VRApplicationError_None"	"No Error"
 "VRApplicationError_AppKeyAlreadyExists"	"Az alkalmazás már regisztrált"
@@ -2413,9 +2413,5 @@
 "[english]Settings_Advanced_RefreshRate_NotFound"	"<b>NOTE:</b> Additional refresh rates are supported by your HMD, but they were not detected by the graphics driver."
 "Settings_Advanced_RefreshRate_NotAvailableExtended"	"<b>MEGJEGYZÉS:</b> HMD-d további képfrissítési frekvenciákat is támogat, de a SteamVR nem tudja kezelni a képfrissítési frekvenciákat, amikor a HMD kiterjesztett módban van. <a href='vrmonitor://directmode/enable'><span style='color:white;'>Közvetlen mód engedélyezése.</span></a>"
 "[english]Settings_Advanced_RefreshRate_NotAvailableExtended"	"<b>NOTE:</b> Additional refresh rates are supported by your HMD, but SteamVR cannot manage refresh rates when the HMD is in extended mode. <a href='vrmonitor://directmode/enable'><span style='color:white;'>Enable direct mode.</span></a>"
-"oculus_display_lost"	"Az Oculus rendszer elvesztette a kapcsolatot a kijelzővel. Ellenőrizd a fejszett csatlakozását, majd indítsd újra."
-"[english]oculus_display_lost"	"The Oculus system has lost its connection to the display. Please check your headset's connection and then restart."
-"BS20_UpdateRecovery_FoundStations"	"Keresés befejezve.<br><br><font color=#ffffff>Ezeknek a bázisállomásoknak befejezetlen frissítéseik vannak.<br><br>Válassz ki egy bázisállomást, majd a folytatáshoz kattints az „Eszköz helyreállítására”.</font>"
-"[english]BS20_UpdateRecovery_FoundStations"	"Scan Completed.<br><br><font color=#ffffff>These Base Stations have incomplete updates.<br><br>Please select a Base Station and click 'Recover Device' to continue.</font>"
 }
 }
