--- a/content/vrmonitor/translations/vrmonitor_norwegian.txt
+++ b/content/vrmonitor/translations/vrmonitor_norwegian.txt
@@ -2286,12 +2286,12 @@
 "[english]BS20_ConfigureChannel_IdentifyRequiresFirmareUpdate"	"%1 requires a device update to enable device identification."
 "BS_PowerManagement_VisibleNowInTracking"	"Synlig nå i denne sporingsøkten"
 "[english]BS_PowerManagement_VisibleNowInTracking"	"Visible now in this tracking session"
-"Monitor_RestartRequestedDialog_Title"	"Start driveren %1 på nytt"
-"[english]Monitor_RestartRequestedDialog_Title"	"Restart for %1 driver"
+"Monitor_RestartRequestedDialog_Title"	"Omstart kreves"
+"[english]Monitor_RestartRequestedDialog_Title"	"Restart Required"
 "Monitor_RestartRequestedDialog_MessageNoReason"	"Driveren %1 må starte SteamVR på nytt."
 "[english]Monitor_RestartRequestedDialog_MessageNoReason"	"Driver %1 needs to restart SteamVR."
-"Monitor_RestartRequestedDialog_Message"	"%1"
-"[english]Monitor_RestartRequestedDialog_Message"	"%1"
+"Monitor_RestartRequestedDialog_Message"	"Driveren %1 må starte SteamVR på nytt.\n%2"
+"[english]Monitor_RestartRequestedDialog_Message"	"Driver %1 needs to restart SteamVR.\n%2"
 "Monitor_RestartRequestedDialog_Restart"	"Start SteamVR på nytt"
 "[english]Monitor_RestartRequestedDialog_Restart"	"Restart SteamVR"
 "Monitor_RestartRequestedDialog_Quit"	"Avslutt SteamVR"
@@ -2354,8 +2354,8 @@
 "[english]BS20_UpdateRecovery_NoStationsFound"	"Scan Completed.\n\nThere are no broadcasting Base Stations needing recovery within proximity."
 "BS20_UpdateRecovery_Refresh"	"Skann på nytt"
 "[english]BS20_UpdateRecovery_Refresh"	"Scan Again"
-"BS20_UpdateRecovery_UpdateDevice"	"Gjenopprett enhet"
-"[english]BS20_UpdateRecovery_UpdateDevice"	"Recover Device"
+"BS20_UpdateRecovery_UpdateDevice"	"Oppdater enhet"
+"[english]BS20_UpdateRecovery_UpdateDevice"	"Update Device"
 "VRApplicationError_None"	"Ingen feil"
 "[english]VRApplicationError_None"	"No Error"
 "VRApplicationError_AppKeyAlreadyExists"	"Programmet er allerede registrert"
@@ -2402,9 +2402,5 @@
 "[english]Settings_Advanced_RefreshRate_NotFound"	"<b>NOTE:</b> Additional refresh rates are supported by your HMD, but they were not detected by the graphics driver."
 "Settings_Advanced_RefreshRate_NotAvailableExtended"	"<b>MERK:</b> Ytterligere oppdateringsfrekvenser støttes av hodesettet, men SteamVR kan ikke behandle oppdateringsfrekvenser når hodesettet er i utvidet modus. <a href='vrmonitor://directmode/enable'><span style='color:white;'>Slå på direkte skjermmodus.</span></a>"
 "[english]Settings_Advanced_RefreshRate_NotAvailableExtended"	"<b>NOTE:</b> Additional refresh rates are supported by your HMD, but SteamVR cannot manage refresh rates when the HMD is in extended mode. <a href='vrmonitor://directmode/enable'><span style='color:white;'>Enable direct mode.</span></a>"
-"oculus_display_lost"	"Oculus-systemet har mistet forbindelsen til skjermen. Sjekk hodesettets tilkobling og start deretter på nytt."
-"[english]oculus_display_lost"	"The Oculus system has lost its connection to the display. Please check your headset's connection and then restart."
-"BS20_UpdateRecovery_FoundStations"	"Skann fullført.<br><br><font color=#ffffff>Disse basestasjonene har ufullstendige oppdateringer.<br><br>Velg en basestasjon og trykk «Gjenopprett enhet» for å fortsette.</font>"
-"[english]BS20_UpdateRecovery_FoundStations"	"Scan Completed.<br><br><font color=#ffffff>These Base Stations have incomplete updates.<br><br>Please select a Base Station and click 'Recover Device' to continue.</font>"
 }
 }
