1559611040 | 62 files | M bin/version.txt,  M content/panorama/localization/tenfoot_brazilian.txt,  M content/panorama/localization/tenfoot_bulgarian.txt,  M content/panorama/localization/tenfoot_czech.txt,  M content/panorama/localization/tenfoot_danish.txt,  M content/panorama/localization/tenfoot_dutch.txt,  M content/panorama/localization/tenfoot_finnish.txt,  M content/panorama/localization/tenfoot_french.txt,  M content/panorama/localization/tenfoot_german.txt,  M content/panorama/localization/tenfoot_greek.txt,  M content/panorama/localization/tenfoot_hungarian.txt,  M content/panorama/localization/tenfoot_italian.txt,  M content/panorama/localization/tenfoot_japanese.txt,  M content/panorama/localization/tenfoot_korean.txt,  M content/panorama/localization/tenfoot_koreana.txt,  M content/panorama/localization/tenfoot_latam.txt,  M content/panorama/localization/tenfoot_norwegian.txt,  M content/panorama/localization/tenfoot_polish.txt,  M content/panorama/localization/tenfoot_portuguese.txt,  M content/panorama/localization/t
https://steamdb.info/patchnotes/3885126/

--- a/resources/webinterface/dashboard/localization/bindingui_english.json
+++ b/resources/webinterface/dashboard/localization/bindingui_english.json
@@ -135,6 +135,15 @@
   "SourceInputMode_FewerOptions": "Fewer options",
 
   "SourceInputAction_none": "None",
+  "SourceInputAction_NoItems": "None in action set",
+
+  "SourceInputSubHeader_BooleanActions": "Boolean Actions",
+  "SourceInputSubHeader_Vector1Actions": "Vector1 Actions",
+  "SourceInputSubHeader_Vector2Actions": "Vector2 Actions",
+  "SourceInputSubHeader_Vector3Actions": "Vector3 Actions",
+  "SourceInputSubHeader_SkeletonActions": "Skeleton Actions",
+  "SourceInputSubHeader_PoseActions": "Pose Actions",
+  "SourceInputSubHeader_HapticsActions": "Haptic Actions",
 
   "BindingUI_PoseTitle": "Pose Bindings",
   "BindingUI_HapticsTitle": "Haptics Bindings",
@@ -225,6 +234,8 @@
   "BindingUI_SaveTitle": "Save your binding",
   "BindingUI_SaveBinding": "Save",
   "BindingUI_SaveDefaultName": "My %1$s configuration for %2$s",
+  "BindingUI_SaveDefaultName_Personal": "Saved %1$s configuration for %2$s",
+  "BindingUI_SaveDefaultName_Public": "Shared binding from %1$s",
   "BindingUI_SaveDescriptionPlaceholder": "(Optional)",
   "BindingUI_SelectThisBinding": "Select this Binding",
   "BindingUI_EditThisBinding": "Edit this Binding",
